# super-agent

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: main.rs
crates/agent-cli/src/tui/: app.rs  approval.rs  component.rs  footer.rs  header.rs  line_buffer.rs  markdown.rs  messages.rs  mod.rs  spinner.rs  theme.rs  toast.rs  tool_block.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: context.rs  engine.rs  file_diff.rs  hooks.rs  learning_loop.rs  lib.rs  permissions.rs  planner.rs  project_instructions.rs  session.rs  skill_evolution.rs  snapshot.rs  subagent.rs  tool_executor.rs
crates/agent-core/tests/: integration_tests.rs
crates/agent-llm/: Cargo.toml
crates/agent-llm/src/: lib.rs  openai.rs  provider.rs  types.rs
crates/agent-memory/: Cargo.toml
crates/agent-memory/src/: lib.rs  store.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: custom_skill.rs  file_edit.rs  file_read.rs  file_write.rs  git_commit.rs  git_diff.rs  git_status.rs  glob_tool.rs  grep.rs  lib.rs  ls.rs  mcp_bridge.rs  mcp_client.rs  mcp_manager.rs  registry.rs  shell.rs  skill_list.rs  skill_read.rs  util.rs  web_search.rs
scripts/: test.sh
