[workspace]
members = [
    "crates/agent-cli",
    "crates/agent-core",
    "crates/agent-tools",
    "crates/agent-llm",
    "crates/agent-memory",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
sled = "0.34"
toml = "0.8"
dirs = "5"
