[package]
name = "agent-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
rustyline = "14"
futures-util = { workspace = true }
agent-core = { path = "../agent-core" }
chrono = { workspace = true }
agent-llm = { path = "../agent-llm" }
agent-tools = { path = "../agent-tools" }
ratatui = "0.28"
crossterm = "0.28"
pulldown-cmark = "0.12"
syntect = "5"
unicode-width = "0.2"
