[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
agent-llm = { path = "../agent-llm" }
agent-tools = { path = "../agent-tools" }
