[package]
name = "agent-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sled = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
agent-llm = { path = "../agent-llm" }
