[package]
name = "agent-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
walkdir = "2"
glob = "0.3"
regex = "1"
urlencoding = "2"
agent-llm = { path = "../agent-llm" }
